Fixed Listing Word overflow

--- a/src/components/atoms/Listing/Listing.scss
+++ b/src/components/atoms/Listing/Listing.scss
@@ -11,6 +11,9 @@
   border: $separator-line;
   border-radius: 5px;
   transition: all 0.2s;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   &:hover {
     transform: scale(1.02) translateY(-0.2rem);
@@ -19,7 +22,8 @@
   &__figure {
     overflow: hidden;
     border-radius: 5px;
-    height: 85%;
+    // height: 76%;
+    flex: 1;
     margin-bottom: 0.2rem;
     display: flex;
     justify-content: center;
@@ -34,6 +38,7 @@
   }
 
   &__label {
+    margin-top: $tiny;
     @include typo-listing-label;
   }
 
